Fixed an error that occurs when the user logs out. Added a custom scrollbar to the dashboard body

--- a/client/src/styles/_dashboard.scss
+++ b/client/src/styles/_dashboard.scss
@@ -83,17 +83,17 @@
       position: relative;
       overflow-y: auto;
 
-      // &::-webkit-scrollbar {
-      //   width: 7px;
-      // }
+      &::-webkit-scrollbar {
+        width: 7px;
+      }
 
-      // &::-webkit-scrollbar-thumb {
-      //   background-color: $text-color;
-      // }
+      &::-webkit-scrollbar-thumb {
+        background-color: $text-color;
+      }
 
-      // &::-webkit-scrollbar-track {
-      //   background: #eee;
-      // }
+      &::-webkit-scrollbar-track {
+        background: #eee;
+      }
     }
   }
 
